---
source: crates/query-engine/translation/tests/tests.rs
expression: result
---
WITH [1_NATIVE_QUERY_artist_by_name] AS (
  SELECT
    *
  FROM
    public."Artist"
  WHERE
    "Name" = @P1
)
SELECT
  ISNULL([3_rows].[rows], '[]') AS [rows]
FROM
  (
    SELECT
      [0_artist_by_name].[ArtistId] AS [Id]
    FROM
      [1_NATIVE_QUERY_artist_by_name] AS [0_artist_by_name] FOR JSON PATH,
      INCLUDE_NULL_VALUES
  ) AS [3_rows]([rows]) FOR JSON PATH,
  INCLUDE_NULL_VALUES,
  WITHOUT_ARRAY_WRAPPER

[(1, String("Rush"))]
